Commit al master del Blog

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body>
-    <h1>This is a new document of information</h1>
+    <div id="container">
+        <div id="post">
+            <h1>This is a title of Post its interesting for reading</h1>
 
-    <p>Vamos a comenzar realizando pruebas, este es el primer parrrafo</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt, modi aut nobis sequi nisi cupiditate perspiciatis. Natus magnam ipsum, modi iste, sint totam eaque provident amet quo, accusamus aperiam.</p>
+ 
+        </div>
+    </div>    
 </body>
 </html>
