--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div id="container">
         <div id="post">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <h1>This is a title of Post its interesting for reading</h1>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt, modi aut nobis sequi nisi cupiditate perspiciatis. Natus magnam ipsum, modi iste, sint totam eaque provident amet quo, accusamus aperiam.</p>
