--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="post">
             <div id="cabecera">
-                Cabecera 
+                Hyper <span id="tagline">All about trending metal music</span>
             </div>
             <h1>This is a title of Post its interesting for reading</h1>
 
