--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="post">
             <h1>This is a title of Post its interesting for reading</h1>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt, modi aut nobis sequi nisi cupiditate perspiciatis. Natus magnam ipsum, modi iste, sint totam eaque provident amet quo, accusamus aperiam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt, modi aut nobis sequi nisi cupiditate perspiciatis. <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi ea ipsam non vero odio veritatis! Aspernatur similique iste est, nam fuga itaque molestias deleniti voluptate, et numquam voluptatum error a?</p>Natus magnam ipsum, modi iste, sint totam eaque provident amet quo, accusamus aperiam.</p>
  
         </div>
     </div>    
