--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <div id="container">
         <div id="post">
             <div id="cabecera">
-                Hyper <span id="tagline">All about trending metal music</span>
+                Hyper <span id="tagline">This is master blog</span>
             </div>
             <h1>This is a title of Post its interesting for reading</h1>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt, modi aut nobis sequi nisi cupiditate perspiciatis. <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi ea ipsam non vero odio veritatis! Aspernatur similique iste est, nam fuga itaque molestias deleniti voluptate, et numquam voluptatum error a?</p>Natus magnam ipsum, modi iste, sint totam eaque provident amet quo, accusamus aperiam.</p>
+            <p>Suscribete y dale Like!</p>
  
         </div>
     </div>    
