--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document of probe</title>
+    <title>W  E  L  C  O  M  E</title>
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body>
