--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="container">
         <div id="post">
             <div id="cabecera">
+                <img id="logo" src="imagenes/spacex.png" alt="">
                 Hyper <span id="tagline">This is my bolg</span>
             </div>
             <h1>This is a title of Post its interesting for reading</h1>
