Cambios a nivel de Fix para una version final

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
                 <img id="logo" src="imagenes/spacex.png" alt="">
                 Hyper <span id="tagline">This is my bolg</span>
             </div>
-            <h1>This is a title of Post its interesting for reading</h1>
+            <h1 id="title">This is a title of Post its interesting for reading</h1>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt, modi aut nobis sequi nisi cupiditate perspiciatis. <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi ea ipsam non vero odio veritatis! Aspernatur similique iste est, nam fuga itaque molestias deleniti voluptate, et numquam voluptatum error a?</p>Natus magnam ipsum, modi iste, sint totam eaque provident amet quo, accusamus aperiam.</p>
-            <p>Suscribete y dale Like !</p>
+            <p>Hi my name is Heber, and this is my First interaction whit a Blog i don't know what do you need reed in this site, but is my practice for tha best version of me.</p>
+
+            <p>Thanks for reeding and try !</p>
  
         </div>
 	<div id="footer">
-		Hecho por HR - Honduras 2024
+		launching for HR - Honduras 2024
 	</div>
     </div>    
 </body>
