Nuevos cambios en el index y agregado el gitignore@

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 id="title">This is a title of Post its interesting for reading</h1>
 
             <p>Hi my name is Heber, and this is my First interaction whit a Blog i don't know what do you need reed in this site, but is my practice for tha best version of me.</p>
-
+            <p><img src="imagenes/Pajaro.jpg" width="30%"></p>
             <p>Thanks for reeding and try !</p>
  
         </div>
